# strawberry-graphene

./: .gitignore  README.md  mypy.ini  pyproject.toml
app/app/: settings.py  urls.py
main/: definitions.py  schema.py
strawberry_graphene/: extension.py  schema.py
tests/: test_custom_convertor.py
